Actualizacion de proyectos de mi portafolio

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					
 				</ul>
 				<p>
-					¡Hola! Soy Luis Alberto Condori, apasionado en el desarrollo de software con más de <b>4 años</b> de experiencia desarrollando sistemas informáticos a la medida. A lo largo de mi trayectoria, he colaborado con mis compañeros de trabajo en sus funciones en diversas áreas como <b>backend, frontend y gestión de bases de datos</b>. Aprendiendo siempre nuevas tecnologías y recursos para desarrollar <b>sistemas informáticos y aplicaciones móviles</b> fluidas y escalables.
+					¡Hola! Soy Luis Alberto Condori, apasionado en el desarrollo de software con más de <b>6 años</b> de experiencia desarrollando sistemas informáticos a la medida. A lo largo de mi trayectoria, he colaborado con mis compañeros de trabajo en sus funciones en diversas áreas como <b>backend, frontend y gestión de bases de datos</b>. Aprendiendo siempre nuevas tecnologías y recursos para desarrollar <b>sistemas informáticos y aplicaciones móviles</b> fluidas y escalables.
 				</p>
 			</div>
 		</section>
@@ -111,6 +111,17 @@
 			<h2 class="subtitle">Proyectos</h2>
 			<div class="major-container">
 				<div class="projects__container">
+					<article class="project">
+						<a href="registro/index.html">
+							<div class="project__info">
+								<h3 class="project__title"> Sistema de registro <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M20 4V8M20 4H16M20 4L14 10M18 11V16C18 17.1046 17.1046 18 16 18H8C6.89543 18 6 17.1046 6 16V8C6 6.89543 6.89543 6 8 6H13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </svg> </h3>
+								<p class="project__description">
+									Sistema administrativo de registro de usuarios, es un sistema donde se registran los usuarios con diferentes roles, este sistema esta  desarrollado con las tecnologías: Vuejs 3, Vuetify 3,Axios, NodeJS ExpressJS etc..
+								</p>
+							</div>
+							<figure class="project__image"> <img src="https://res.cloudinary.com/dpyrrgou3/image/upload/v1727057203/9c606ba8f5e8a7_h9quky.png" alt="Registro logo" width="579" height="150" loading="lazy" decoding="async"> </figure>
+						</a>
+					</article>
 					<article class="project">
 						<a href="https://produccion.gob.bo/" target="_blank">
 							<div class="project__info">
@@ -208,6 +219,9 @@
 									<li class="stack" style="--background-dif:#539E43" tool-tip>
 										<p class="stack__name">VueJs</p>
 										<tool-tip inert="true" role="tooltip" tip-position="top" aria-hidden="true">VueJs </tool-tip> <span class="icon-VueJS"></span> </li>
+									<li class="stack" style="--background-dif:#0E98F6" tool-tip>
+										<p class="stack__name">Vuetify</p>
+										<tool-tip inert="true" role="tooltip" tip-position="top" aria-hidden="true">Vuetify </tool-tip> <span class="icon-Vuetify"></span> </li>
 									<li class="stack" style="--background-dif:#47C5FB" tool-tip>
 										<p class="stack__name">Flutter</p>
 										<tool-tip inert="true" role="tooltip" tip-position="top" aria-hidden="true"> Flutter </tool-tip> <span class="icon-Flutter"></span> </li>
@@ -233,6 +247,12 @@
 								<li class="stack" style="--background-dif:#FF2D20" tool-tip>
 									<p class="stack__name">Laravel</p>
 									<tool-tip inert="true" role="tooltip" tip-position="top" aria-hidden="true"> Laravel </tool-tip> <span class="icon-Laravel"></span> </li>
+								<li class="stack" style="--background-dif:#4D9243" tool-tip>
+									<p class="stack__name">NodeJS</p>
+									<tool-tip inert="true" role="tooltip" tip-position="top" aria-hidden="true"> NodeJS </tool-tip> <span class="icon-NodeJS"></span> </li>
+								<li class="stack" style="--background-dif:#6A9500" tool-tip>
+									<p class="stack__name">Swagger Doc</p>
+									<tool-tip inert="true" role="tooltip" tip-position="top" aria-hidden="true"> Swagger Doc </tool-tip> <span class="icon-Swagger"></span> </li>
 								<li class="stack" style="--background-dif:#00D2B8" tool-tip>
 									<p class="stack__name">Dart</p>
 									<tool-tip inert="true" role="tooltip" tip-position="top" aria-hidden="true"> Dart </tool-tip> <span class="icon-Dart"></span> </li>
