Actualización de modulos del sistema en vuejs 3, vuetify 3, vuex, axios, vue-chartjs

--- a/registro/index.html
+++ b/registro/index.html
@@ -56,6 +56,42 @@
             </li>
           </div>
 
+          <div class="border-l-0">
+            <li aria-label="From Image" class="-ml-px py-1 pl-4 text-text-inactive transition-all hover:border-text-active  hover:text-text-active">
+              <a href="#configuracion">Actualizar Perfil y Seguridad del usuario</a>
+            </li>
+          </div>
+
+          <div class="border-l-0">
+            <li aria-label="From Image" class="-ml-px py-1 pl-4 text-text-inactive transition-all hover:border-text-active  hover:text-text-active">
+              <a href="#roles">Roles registrados</a>
+            </li>
+          </div>
+
+          <div class="border-l-0">
+            <li aria-label="From Image" class="-ml-px py-1 pl-4 text-text-inactive transition-all hover:border-text-active  hover:text-text-active">
+              <a href="#permisos">Permisos registrados</a>
+            </li>
+          </div>
+
+          <div class="border-l-0">
+            <li aria-label="From Image" class="-ml-px py-1 pl-4 text-text-inactive transition-all hover:border-text-active  hover:text-text-active">
+              <a href="#graficos">Gráfico de usuarios por rol</a>
+            </li>
+          </div>
+
+          <div class="border-l-0">
+            <li aria-label="From Image" class="-ml-px py-1 pl-4 text-text-inactive transition-all hover:border-text-active  hover:text-text-active">
+              <a href="#export">Exportar registro de usuarios</a>
+            </li>
+          </div>
+
+          <div class="border-l-0">
+            <li aria-label="From Image" class="-ml-px py-1 pl-4 text-text-inactive transition-all hover:border-text-active  hover:text-text-active">
+              <a href="#logs">Ver logs del sistema con opción de exportar</a>
+            </li>
+          </div>
+
         </ul>
 
         <h3 class="mt-4 mb-2 text-2xl font-semibold capitalize first:mt-0 lg:text-lg">
@@ -122,7 +158,7 @@
 
           <h2 id="login">Inicio de sesión</h2>
 
-          <p>Se muestra el formulario login para el inicio de sesión del administrador.</p>
+          <p>Se muestra el formulario login para el inicio de sesión.</p>
 
           <img src="../images/img/registro/login1.jpg" alt="">
 
@@ -137,6 +173,44 @@
           <p>Se muestra la información del perfil de usuario que inició la sesión.</p>
 
           <img src="../images/img/registro/perfil1.jpg" alt="">
+
+          <h2 id="configuracion">Actualizar Perfil y Seguridad del usuario, notificaciones, preferencia de tema</h2>
+
+          <p>Se muestra los datos del usuario autenticado, con la opción de cambiar nueva contraseña, subir imagen (avatar), activar notificaciones, preferencias de tema (light, dark).</p>
+
+          <img src="../images/img/registro/configuracion1.jpg" alt="">
+          <img src="../images/img/registro/configuracion2.jpg" alt="">
+          <img src="../images/img/registro/configuracion3.jpg" alt="">
+
+          <h2 id="roles">Roles registrados</h2>
+
+          <p>Se muestra en datatable la información de todos los roles registrados en el sistema.</p>
+
+          <img src="../images/img/registro/roles1.jpg" alt="">
+
+          <h2 id="permisos">Permisos registrados</h2>
+
+          <p>Se muestra en datatable la información de todos los permisos registrados en el sistema.</p>
+
+          <img src="../images/img/registro/permisos1.jpg" alt="">
+
+          <h2 id="graficos">Gráficos estadísticos</h2>
+
+          <p>Se muestra en gráfico de vue-chartjs total de usuarios por rol en el sistema.</p>
+
+          <img src="../images/img/registro/grafico1.jpg" alt="">
+
+          <h2 id="export">Exports</h2>
+
+          <p>Se muestra un select para elegir el formato  de exportar Datos de Usuarios en: PDF, EXCEL y CSV.</p>
+
+          <img src="../images/img/registro/export1.jpg" alt="">
+
+          <h2 id="logs">Logs del Sistema</h2>
+
+          <p>Se muestra información de logs del sistema con opción de exportar, buscar por palabras claves y filtrar por fechas.</p>
+
+          <img src="../images/img/registro/logs1.jpg" alt="">
 
           <h2 id="documentacion">Backend</h2>
 
@@ -168,6 +242,7 @@
           <img src="../images/img/registro/documentacion2.jpg" alt=""> 
           <img src="../images/img/registro/documentacion1.jpg" alt=""> 
           <img src="../images/img/registro/documentacion3.jpg" alt=""> 
+          <img src="../images/img/registro/documentacion4.jpg" alt=""> 
 
         </article>
 
