--- a/index.html
+++ b/index.html
@@ -280,6 +280,9 @@
 									<li class="stack" style="--background-dif:#007ACC" tool-tip>
 										<p class="stack__name">TypeScript</p>
 										<tool-tip inert="true" role="tooltip" tip-position="top" aria-hidden="true"> TypeScript </tool-tip> <span class="icon-TypeScript"></span> </li>
+									<li class="stack" style="--background-dif:#FFCA28" tool-tip>
+										<p class="stack__name">Power bi</p>
+										<tool-tip inert="true" role="tooltip" tip-position="top" aria-hidden="true"> Power bi </tool-tip> <span class="icon-PowerBi"></span> </li>
 									
 								</ul>
 							
