--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<main class="portfolio">
 		<section class="home">
 			<article class="title">
-				<h3>Luis Alberto Condori</h3>
+				<h3>Luis Alberto Condori Zapana</h3>
 				<h2>Desarrollador de Sistemas Informáticos</h2>
 				<p class="caption">
 					Apasionado por el desarrollo de sistemas y aplicaciones móviles. Siempre en constante aprendizaje sobre nuevas tecnologías para ofrecer la solución adecuada en el momento preciso.
