--- a/index.html
+++ b/index.html
@@ -79,31 +79,31 @@
 					<p class="experience__role">Desarrollador de sistemas informáticos y aplicaciones móviles</p>
 				</div>
 
-				<h4>Técnico en Soporte y Mantenimiento de Sistemas</h4>
+				<h3 class="project__title">Técnico en Soporte y Mantenimiento de Sistemas</h3>
 
-				  <p>Experiencia en soporte y mantenimiento de equipos de computación. Participación activa en el desarrollo de sistemas informáticos junto con un equipo de trabajo multidisciplinario.</p>
+				  <p>Experiencia en <b>soporte y mantenimiento</b> de equipos de computación. Participación activa en el <b>desarrollo de sistemas informáticos</b> junto con un equipo de trabajo multidisciplinario.</p>
 
-				  <h4>Desarrollo de Sistemas y Aplicaciones</h4>
+				  <h3 class="project__title">Desarrollo de Sistemas y Aplicaciones</h3>
 
 				  <ul class="experience__tasks">
 
-				    <li>Diseño y desarrollo de sistemas de alta calidad, responsivos y fáciles de usar.</li>
+				    <li><b>Diseño y desarrollo de sistemas</b> de alta calidad, <b>responsivos</b> y fáciles de usar.</li>
 
-				    <li>Creación de aplicaciones móviles con Flutter y Dart, integrando autenticación por PIN de seguridad y huella dactilar.</li>
+				    <li>Creación de <b>aplicaciones móviles con Flutter y Dart</b>, integrando autenticación por <b>PIN de seguridad</b> y <b>huella dactilar</b>.</li>
 
-				    <li>Desarrollo de sistemas de blogs con su correspondiente sistema de gestión de contenidos (CMS).</li>
+				    <li>Desarrollo de sistemas de blogs con su correspondiente <b>sistema de gestión de contenidos</b> (CMS).</li>
 
-				    <li>Revisión y actualización de código en sistemas ya desarrollados para incorporar nuevos requerimientos y funcionalidades.</li>
+				    <li><b>Revisión y actualización</b> de código en sistemas ya desarrollados para incorporar nuevos <b>requerimientos y funcionalidades</b>.</li>
 
-				    <li>Apoyo en frontend y backend para colaborar con el equipo de desarrollo.</li>
+				    <li>Apoyo en <b>frontend y backend</b> para colaborar con el equipo de desarrollo.</li>
 
-				    <li>Migración de proyectos a nuevas versiones de tecnologías de desarrollo.</li>
+				    <li>Migración de proyectos a <b>nuevas versiones</b> de tecnologías de desarrollo.</li>
 
 				  </ul>
 
-				  <h4>Aprendizaje Autónomo</h4>
+				  <h3 class="project__title">Aprendizaje Autónomo</h3>
 
-				  <p>Primeros pasos en el desarrollo web adquiridos durante mis estudios universitarios en la carrera de Ingeniería de Sistemas y de forma autodidacta mediante cursos virtuales. Estos conocimientos me permitieron crear proyectos personales que me abrieron las puertas al mundo laboral.
+				  <p>Primeros pasos en el <b>desarrollo web</b> adquiridos durante mis estudios universitarios en la carrera de Ingeniería de Sistemas y de forma <b>autodidacta</b> mediante cursos virtuales. Estos conocimientos me permitieron <b>crear proyectos personales</b> que me abrieron las puertas al mundo laboral.
 				  </p>
 				
 	
