--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 					<p class="experience__role">Desarrollador de sistemas informáticos y aplicaciones móviles</p>
 				</div>
 
-				<h3 class="project__title">Técnico en Soporte y Mantenimiento de Sistemas</h3>
+				<h3>Técnico en Soporte y Mantenimiento de Sistemas</h3>
 
 				  <p>Experiencia en <b>soporte y mantenimiento</b> de equipos de computación. Participación activa en el <b>desarrollo de sistemas informáticos</b> junto con un equipo de trabajo multidisciplinario.</p>
 
-				  <h3 class="project__title">Desarrollo de Sistemas y Aplicaciones</h3>
+				  <h3>Desarrollo de Sistemas y Aplicaciones</h3>
 
 				  <ul class="experience__tasks">
 
@@ -101,7 +101,7 @@
 
 				  </ul>
 
-				  <h3 class="project__title">Aprendizaje Autónomo</h3>
+				  <h3>Aprendizaje Autónomo</h3>
 
 				  <p>Primeros pasos en el <b>desarrollo web</b> adquiridos durante mis estudios universitarios en la carrera de Ingeniería de Sistemas y de forma <b>autodidacta</b> mediante cursos virtuales. Estos conocimientos me permitieron <b>crear proyectos personales</b> que me abrieron las puertas al mundo laboral.
 				  </p>
